# Masterthesis

./: README.md
3d_models/: Asian_Dragon.pcd  Horse.pcd
Datagenerator/: CMakeLists.txt  DefaultConfiguration.yaml  Information.hpp  README.md  Share_Data.hpp  View_Space.hpp  datagenerator.bat  main.cpp  test_view_space.txt  view_space.txt
Datagenerator/points_on_sphere/: pack.3.124.txt  pack.3.40_r30.txt  pack.3.40_r40.txt
GVPN/: average_views.py  calculate_coverage.py  chosen_views_viewer.py  convert_r.py  dataset.py  eval_novel.py  eval_single_file_mascvp.py  evaluate_test.py  loss.py  model.py  object_name_extract.py  pcd_viewer.py  show_viewspace.py  train.py
NBV_GT_label/Dragon/rotate_0/: 32_longtail_sample.txt  32_nbv_sample.txt  8_distrubution.txt  8_longtail_sample.txt  8_nbv_sample.txt  nbv_0.txt  nbv_1.txt  nbv_10.txt  nbv_11.txt  nbv_12.txt  nbv_13.txt  nbv_14.txt  nbv_15.txt  nbv_16.txt  nbv_17.txt  nbv_18.txt  nbv_19.txt  nbv_2.txt  nbv_20.txt  nbv_21.txt  nbv_22.txt  nbv_3.txt  nbv_4.txt  nbv_5.txt  nbv_6.txt  nbv_7.txt  nbv_8.txt  nbv_9.txt  view_cases.txt
NBV_GT_label/Dragon/rotate_1/: 32_distrubution.txt  32_longtail_sample.txt  32_nbv_sample.txt  8_longtail_sample.txt  8_nbv_sample.txt  nbv_0.txt  nbv_1.txt  nbv_10.txt  nbv_11.txt  nbv_12.txt  nbv_13.txt  nbv_14.txt  nbv_15.txt  nbv_16.txt  nbv_17.txt  nbv_18.txt  nbv_19.txt  nbv_2.txt  nbv_20.txt  nbv_21.txt  nbv_3.txt  nbv_4.txt  nbv_5.txt  nbv_6.txt  nbv_7.txt  nbv_8.txt  nbv_9.txt  view_cases.txt
NBV_GT_label/Dragon/rotate_2/: 32_distrubution.txt  32_longtail_sample.txt  32_nbv_sample.txt  8_longtail_sample.txt  8_nbv_sample.txt  nbv_0.txt  nbv_1.txt  nbv_10.txt  nbv_11.txt  nbv_12.txt  nbv_13.txt  nbv_14.txt  nbv_15.txt  nbv_16.txt  nbv_17.txt  nbv_18.txt  nbv_19.txt  nbv_2.txt  nbv_20.txt  nbv_21.txt  nbv_3.txt  nbv_4.txt  nbv_5.txt  nbv_6.txt  nbv_7.txt  nbv_8.txt  nbv_9.txt  view_cases.txt
NBV_GT_label/Dragon/rotate_3/: 32_distrubution.txt  32_longtail_sample.txt  32_nbv_sample.txt  8_longtail_sample.txt  8_nbv_sample.txt  nbv_0.txt  nbv_1.txt  nbv_10.txt  nbv_11.txt  nbv_12.txt  nbv_13.txt  nbv_14.txt  nbv_15.txt  nbv_16.txt  nbv_17.txt  nbv_18.txt  nbv_19.txt  nbv_2.txt  nbv_20.txt  nbv_21.txt  nbv_22.txt  nbv_3.txt  nbv_4.txt  nbv_5.txt  nbv_6.txt  nbv_7.txt  nbv_8.txt  nbv_9.txt  view_cases.txt
NBV_GT_label/Dragon/rotate_4/: 32_distrubution.txt  32_longtail_sample.txt  32_nbv_sample.txt  8_longtail_sample.txt  8_nbv_sample.txt  nbv_0.txt  nbv_1.txt  nbv_10.txt  nbv_11.txt  nbv_12.txt  nbv_13.txt  nbv_14.txt  nbv_15.txt  nbv_16.txt  nbv_17.txt  nbv_18.txt  nbv_19.txt  nbv_2.txt  nbv_20.txt  nbv_21.txt  nbv_3.txt  nbv_4.txt  nbv_5.txt  nbv_6.txt  nbv_7.txt  nbv_8.txt  nbv_9.txt  view_cases.txt
NBV_GT_label/Dragon/rotate_5/: 32_distrubution.txt  32_longtail_sample.txt  32_nbv_sample.txt  8_longtail_sample.txt  8_nbv_sample.txt  nbv_0.txt  nbv_1.txt  nbv_10.txt  nbv_11.txt  nbv_12.txt  nbv_13.txt  nbv_14.txt  nbv_15.txt  nbv_16.txt  nbv_17.txt  nbv_18.txt  nbv_19.txt  nbv_2.txt  nbv_20.txt  nbv_3.txt  nbv_4.txt  nbv_5.txt  nbv_6.txt  nbv_7.txt  nbv_8.txt  nbv_9.txt  view_cases.txt
NBV_GT_label/Dragon/rotate_6/: 32_distrubution.txt  32_longtail_sample.txt  32_nbv_sample.txt  8_longtail_sample.txt  8_nbv_sample.txt  nbv_0.txt  nbv_1.txt  nbv_10.txt  nbv_11.txt  nbv_12.txt  nbv_13.txt  nbv_14.txt  nbv_15.txt  nbv_2.txt  (+14 more)
tools/mesh_sampling/: CMakeLists.txt  mesh_sampling.cpp
tools/ply2pcd/: CMakeLists.txt
(+29 files in other folders)
